--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,9 @@
   },
   "homepage": "https://github.com/Sergecodes/suivi-these--backend#readme",
   "dependencies": {
-    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-fileupload": "^1.3.1",
-    "express-session": "^1.17.2",
     "mongoose": "^6.2.10",
     "validator": "^13.7.0"
   },
