--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.10",
+    "mongoose-autopopulate": "^0.16.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
