--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
+    "firebase": "^9.6.11",
     "joi-password-complexity": "^5.1.0",
     "mongoose": "^6.2.10",
     "mongoose-autopopulate": "^0.16.1",
