Update register routes status code & set up express-session

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,2 +1,6 @@
-URL_BD=mongodb://localhost:1112/suivi-these-bd
-PORT=1111
+URL_BD=mongodb://localhost:27017/bd-name
+PORT=3001
+FIREBASE_STORAGE_API_KEY=key-here
+USE_FIREBASE=false
+SESSION_SECRET=secret-here
+PRODUCTION=false
