--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -2,5 +2,6 @@ URL_BD=mongodb://localhost:27017/bd-name
 PORT=3001
 FIREBASE_STORAGE_API_KEY=key-here
 USE_FIREBASE=false
+basedir=/home/serge/Desktop/suivi-these/dossiers_etudiants/
 SESSION_SECRET=secret-here
 PRODUCTION=false
