--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -3,5 +3,6 @@ PORT=3001
 FIREBASE_STORAGE_API_KEY=key-here
 USE_FIREBASE=false
 basedir=/home/serge/Desktop/suivi-these/dossiers_etudiants/
-SESSION_SECRET=secret-here
+SESSION_SECRET=secret
+ADMIN_SECRET=secret
 PRODUCTION=false
