--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.3.1",
+    "@react-pdf-viewer/default-layout": "^3.3.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -11,6 +13,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.3",
+    "pdfjs-dist": "^2.13.216",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
