--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,8 +1,9 @@
-URL_BD=mongodb://localhost:27017/bd-name
+URL_BD=mongodb://localhost:27017/nom-bd
 PORT=3001
-FIREBASE_STORAGE_API_KEY=key-here
+FIREBASE_STORAGE_API_KEY=secret-key
 USE_FIREBASE=false
 basedir=/home/serge/Desktop/suivi-these/dossiers_etudiants/
 SESSION_SECRET=secret
 ADMIN_SECRET=secret
+RECTORAT_SECRET=secret
 PRODUCTION=false
