--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.1",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.3",
     "pdfjs-dist": "^2.13.216",
