--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.1",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.3",
     "react": "^17.0.2",
@@ -18,12 +19,8 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-<<<<<<< HEAD
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-=======
+    "react-toastify": "^9.0.1",
     "react-use": "^17.3.2",
->>>>>>> d42944e6ac37354b15d915379621d6a250243ca5
     "web-vitals": "^2.1.4"
   },
   "scripts": {
