--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.10.2",
     "@react-pdf-viewer/core": "^3.3.1",
     "@react-pdf-viewer/default-layout": "^3.3.1",
     "@reduxjs/toolkit": "^1.8.1",
@@ -13,12 +14,14 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "leaflet": "^1.8.0",
     "moment": "^2.29.3",
     "pdfjs-dist": "^2.13.216",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
