Connect mongodb atlas, implement some methods on models & utils

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,9 +1,7 @@
-URL_BD=mongodb://localhost:27017/nom-bd
+URL_BD=mongodb://localhost:27017/suivi-these-bd
 PORT=3001
 FIREBASE_STORAGE_API_KEY=secret-key
 USE_FIREBASE=false
 basedir=/home/serge/Desktop/suivi-these/dossiers_etudiants/
 SESSION_SECRET=secret
-ADMIN_SECRET=secret
-RECTORAT_SECRET=secret
 PRODUCTION=false
