Dockerize project (first draft) & update some fields in etudiant form

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -5,3 +5,7 @@ USE_FIREBASE=false
 basedir=/home/serge/Desktop/suivi-these/dossiers_etudiants/
 SESSION_SECRET=secret
 PRODUCTION=false
+USE_DOCKER=false
+MONGO_INITDB_ROOT_USERNAME=docker-db-username
+MONGO_INITDB_ROOT_PASSWORD=docker-db-password
+MONGO_INITDB_DATABASE=suivi-these-bd
