--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "crypto": "^1.0.1",
     "leaflet": "^1.8.0",
     "moment": "^2.29.3",
     "pdfjs-dist": "^2.13.216",
@@ -31,6 +32,9 @@
     "react-use": "^17.3.2",
     "reactstrap": "^9.1.1",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "crypto": false
   },
   "scripts": {
     "start": "react-scripts start",
