--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -5,3 +5,8 @@ USE_FIREBASE=false
 basedir=/home/serge/Desktop/suivi-these/dossiers_etudiants/
 SESSION_SECRET=secret
 PRODUCTION=false
+MAIL_USERNAME=
+MAIL_PASSWORD=
+OAUTH_CLIENTID=
+OAUTH_CLIENT_SECRET=
+OAUTH_REFRESH_TOKEN=
