--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.3",
     "mongoose": "^6.2.10",
     "mongoose-autopopulate": "^0.16.1",
+    "nodemailer": "^6.7.6",
     "validator": "^13.7.0"
   },
   "devDependencies": {
