Finish email implementation

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -5,8 +5,7 @@ USE_FIREBASE=false
 basedir=/home/serge/Desktop/suivi-these/dossiers_etudiants/
 SESSION_SECRET=secret
 PRODUCTION=false
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_FROM=
 OAUTH_CLIENTID=
 OAUTH_CLIENT_SECRET=
 OAUTH_REFRESH_TOKEN=
