--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -5,6 +5,7 @@ USE_FIREBASE=false
 basedir=/home/serge/Desktop/suivi-these/dossiers_etudiants/
 SESSION_SECRET=secret
 PRODUCTION=false
+SEND_EMAILS=false
 MAIL_FROM=
 OAUTH_CLIENTID=
 OAUTH_CLIENT_SECRET=
