--- a/.github/workflows/main_thesis-dhl.yml
+++ b/.github/workflows/main_thesis-dhl.yml
@@ -2,11 +2,6 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
 name: Build and deploy Node.js app to Azure Web App - thesis-dhl
-        
-env: 
-  CI: false
-  PRODUCTION: true
-  REACT_APP_API_BASE_URL: 'https://thesis-dhl-server.azurewebsites.net/api'
   
 on:
   push:
@@ -30,7 +25,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          # npm run test --if-present
         working-directory: ./frontend
 
       - name: Upload artifact for deployment job
@@ -58,5 +53,6 @@ jobs:
         with:
           app-name: 'thesis-dhl'
           slot-name: 'Production'
+          app-settings-json: ${{ secrets.APP_SETTINGS }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_08AF553F84A94C89B70AF9BD72670011 }}
           package: .
