--- a/.github/workflows/main_thesis-dhl.yml
+++ b/.github/workflows/main_thesis-dhl.yml
@@ -34,13 +34,16 @@ jobs:
           npm run build --if-present
           # npm run test --if-present
         working-directory: ./frontend
-
+        
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+        
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
           path: .
-
+    
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -54,6 +57,9 @@ jobs:
         with:
           name: node-app
 
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+        
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
