--- a/.github/workflows/main_thesis-dhl.yml
+++ b/.github/workflows/main_thesis-dhl.yml
@@ -36,7 +36,7 @@ jobs:
         working-directory: ./frontend
         
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./frontend -r
         
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
