--- a/.github/workflows/main_thesis-dhl-server.yml
+++ b/.github/workflows/main_thesis-dhl-server.yml
@@ -3,6 +3,9 @@
 
 name: Build and deploy Node.js app to Azure Web App - thesis-dhl-server
 
+env: 
+  AZURE_WEBAPP_PACKAGE_PATH: './backend'
+
 on:
   push:
     branches:
@@ -21,21 +24,20 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-          # npm run test --if-present
-        working-directory: ./backend
+        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
       - name: Zip artifact for deployment
-        run: zip -u release.zip ./backend -r
+        run: zip -u release.zip ${{ env.AZURE_WEBAPP_PACKAGE_PATH }} -r
         
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,8 +52,8 @@ jobs:
         with:
           name: node-app
 
-      - name: Unzip artifact for deployment
-        run: unzip -o release.zip
+      # - name: Unzip artifact for deployment
+      #   run: unzip -o release.zip
         
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -60,4 +62,4 @@ jobs:
           app-name: 'thesis-dhl-server'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6291CAD668CA44B984BDA85C92E45FDE }}
-          package: ./backend
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/release.zip
