--- a/.github/workflows/main_thesis-dhl-server.yml
+++ b/.github/workflows/main_thesis-dhl-server.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          # path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/release.zip
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +62,4 @@ jobs:
           app-name: 'thesis-dhl-server'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6291CAD668CA44B984BDA85C92E45FDE }}
-          package: .
+          package: release.zip
