--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ yarn-error.log*
 dossiers_etudiants/
 .docker.env
 **/.vscode/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
